--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/laravel",
+    "name": "evgeniy/laravel-second-task",
     "type": "project",
     "description": "The Laravel Framework.",
     "keywords": ["framework", "laravel"],
